Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .main-app {
   padding: 50px;
-  width: 1200px;
-  height: 600px;
-  margin: auto;
   text-align: center;
-  box-sizing: border-box;
 }
 h1 {
   font-family: "Pacifico", cursive;
@@ -12,6 +8,7 @@ h1 {
   background-color: #ffa000;
   text-align: center;
   font-size: 50px;
+  padding: 15px;
 }
 h2 {
   font-family: "Pacifico", cursive;
